<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textStyle="bold"
            android:textSize="24sp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/angka1EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:ems="10"
            android:hint="@string/hint1"
            android:inputType="number"/>

        <EditText
            android:id="@+id/angka2EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint2"
            android:inputType="number"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_below="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp">

        <Button
            android:id="@+id/btn_plus"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:padding="3dp"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            android:padding="3dp"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btn_bagi"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/divide"
            android:padding="3dp"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btn_kali"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/times"
            android:padding="3dp"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout2"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="18dp"
            android:text="@string/delete"/>

        <TextView
            android:id="@+id/tv_hasil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/hasil"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textAlignment="center"
            android:textSize="36sp"/>

    </LinearLayout>
</RelativeLayout>